[gd_scene load_steps=9 format=4 uid="uid://cc4awpfcbl8gj"]

[ext_resource type="PackedScene" uid="uid://djn8dkkv4shg2" path="res://scenes/fish.tscn" id="1_1kvym"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_gjt12"]
[ext_resource type="Texture2D" uid="uid://dqtccd66jp727" path="res://assets/Tilesheet/fishTilesheet.png" id="2_h4ct1"]
[ext_resource type="PackedScene" uid="uid://coaplq4xw1pe6" path="res://scenes/enemy_fish.tscn" id="3_d4xgk"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_aek1m"]
texture = ExtResource("2_h4ct1")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:3/0 = 0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
9:3/0 = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
10:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.125, -0.75, 17.125, -4.75, 14.625, -0.75, 32, 32, -36.375, 32.5, -35.625, 28.5)
11:4/0 = 0
11:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.375, -2.75, 14.625, -0.75, 32, 32, -36.375, 32.5, -35.875, 27.75)
12:4/0 = 0
12:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.375, -2.75, 14.625, -0.75, 32, 32, -32, 32)
13:4/0 = 0
13:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.125, -0.75, 17.125, -4.75, 14.625, -0.75, 32, 32, -36.375, 32.5, -35.625, 28.5)
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
17:0/0 = 0
17:1/0 = 0
17:2/0 = 0

[sub_resource type="TileSet" id="TileSet_ipu8f"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 4
sources/0 = SubResource("TileSetAtlasSource_aek1m")

[sub_resource type="Curve2D" id="Curve2D_rs32o"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 348.779, 62.8667, 0, 0, 0, 0, 343.853, -118.417, 0, 0, 0, 0, 393.116, -118.417, 0, 0, 0, 0, 396.401, 76.525, 0, 0, 0, 0, 345.495, 74.0417, 0, 0, 0, 0, 348.779, 62.8667, 0, 0, 0, 0, 359.674, -93.9136, 0, 0, 0, 0, 395.58, 75.2834, 0, 0, 0, 0, 345.495, 72.8, 0, 0, 0, 0, 345.495, 70.3167, 0, 0, 0, 0, 349.6, 60.3834)
}
point_count = 11

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_qe28k"]
normal = Vector2(0.367428, 0.930052)
distance = -504.13

[node name="Game" type="Node2D"]
script = ExtResource("1_gjt12")

[node name="water" type="ColorRect" parent="."]
offset_left = 1.0
offset_top = 42.0
offset_right = 2727.0
offset_bottom = 242.0
color = Color(0.457023, 0.714312, 0.767209, 1)

[node name="sun" type="ColorRect" parent="."]
offset_top = 2.0
offset_right = 2727.0
offset_bottom = 44.0
color = Color(0.92549, 0.870588, 0.486275, 1)

[node name="Layer0" type="TileMapLayer" parent="."]
use_parent_material = true
position = Vector2(78, 190)
scale = Vector2(0.2, 0.2)
tile_map_data = PackedByteArray("AAD8/wMAAAAAAAMAAAD9/wMAAAABAAIAAAD+/wMAAAADAAMAAAD//wMAAAAEAAIAAAAAAAMAAAAGAAIAAAABAAMAAAAGAAMAAAACAAMAAAAIAAMAAAADAAMAAAABAAMAAAAEAAMAAAAJAAMAAAAHAAMAAAAGAAEAAAAIAAMAAAAEAAAAAAAJAAMAAAAGAAAAAAAKAAMAAAAHAAAAAAALAAMAAAAIAAAAAAAMAAMAAAAJAAAAAAANAAMAAAAGAAEAAAAOAAMAAAADAAEAAAARAAMAAAAAAAMAAAASAAMAAAABAAIAAAATAAMAAAADAAMAAAAUAAMAAAAEAAIAAAAVAAMAAAAGAAIAAAAWAAMAAAAGAAMAAAAXAAMAAAAIAAMAAAAYAAMAAAABAAMAAAAZAAMAAAAAAAMAAAAaAAMAAAABAAIAAAAbAAMAAAADAAMAAAAcAAMAAAAEAAIAAAAdAAMAAAAGAAIAAAAeAAMAAAAGAAMAAAAfAAMAAAAIAAMAAAAgAAMAAAABAAMAAAAhAAMAAAAJAAMAAAAkAAMAAAAAAAMAAAAlAAMAAAABAAIAAAAmAAMAAAADAAMAAAAnAAMAAAAEAAIAAAAoAAMAAAAGAAIAAAApAAMAAAAGAAMAAAAqAAMAAAAIAAMAAAArAAMAAAABAAMAAAAsAAMAAAAJAAMAAAAiAAMAAAACAAIAAAAjAAMAAAAAAAIAAAD8/wIAAAAKAAAAAAADAAIAAAAKAAAAAAALAAIAAAAKAAAAAAAZAAIAAAAKAAAAAAAkAAIAAAAKAAAAAAArAAIAAAAKAAAAAAASAAIAAAAOAAEAAAAIAAIAAAAOAAEAAAAmAAIAAAAOAAEAAAAgAAIAAAAOAAEAAAAtAAMAAAAEAAIAAAAuAAMAAAAGAAIAAAAxAAMAAAAJAAAAAAAyAAMAAAABAAEAAAAzAAMAAAAJAAAAAAA0AAMAAAAEAAAAAAA1AAMAAAAEAAAAAAA2AAMAAAAEAAAAAAA3AAMAAAAEAAAAAAA4AAMAAAAGAAAAAAA5AAMAAAAGAAAAAAA6AAMAAAAEAAEAAAA7AAMAAAAGAAAAAAA8AAMAAAAGAAAAAAA9AAMAAAABAAAAAAA+AAMAAAAEAAAAAAA/AAMAAAAEAAAAAABAAAMAAAABAAAAAABCAAMAAAAHAAEAAABDAAMAAAAJAAAAAABBAAMAAAAEAAAAAABEAAMAAAABAAEAAABFAAMAAAAJAAAAAABGAAMAAAAEAAAAAABHAAMAAAAEAAAAAABIAAMAAAAEAAAAAABJAAMAAAAEAAAAAABKAAMAAAAGAAAAAABLAAMAAAAGAAAAAABMAAMAAAAEAAEAAABNAAMAAAAGAAAAAABOAAMAAAAGAAAAAABPAAMAAAABAAAAAABQAAMAAAAEAAAAAABRAAMAAAAEAAAAAABSAAMAAAAJAAAAAAA9AAIAAAALAAIAAABRAAIAAAALAAIAAABMAAIAAAAOAAEAAAAzAAIAAAAOAAEAAAAUAAIAAAAKAAIAAABCAAIAAAARAAIAAABTAAMAAAABAAEAAABUAAIAAAAOAAEAAABUAAMAAAAJAAAAAABVAAMAAAAEAAAAAABWAAMAAAAEAAAAAABXAAMAAAAEAAAAAABYAAMAAAAEAAAAAABZAAMAAAAGAAAAAABaAAMAAAAGAAAAAABbAAMAAAAEAAEAAABcAAMAAAAGAAAAAABdAAMAAAAGAAAAAABeAAIAAAALAAIAAABeAAMAAAABAAAAAABfAAMAAAAEAAAAAABgAAMAAAAEAAAAAABhAAMAAAABAAAAAABiAAMAAAAEAAAAAABjAAIAAAARAAIAAABjAAMAAAAHAAEAAABkAAMAAAAJAAAAAABlAAMAAAABAAEAAABmAAMAAAAJAAAAAABnAAMAAAAEAAAAAABoAAMAAAAEAAAAAABpAAMAAAAEAAAAAABqAAMAAAAEAAAAAABrAAMAAAAGAAAAAABsAAMAAAAGAAAAAABtAAIAAAAOAAEAAABtAAMAAAAEAAEAAABuAAMAAAAGAAAAAABvAAMAAAAGAAAAAABwAAMAAAABAAAAAABxAAMAAAAEAAAAAAByAAIAAAALAAIAAAByAAMAAAAEAAAAAABzAAMAAAABAAAAAAAGAAMAAAAHAAEAAAAFAAMAAAAHAAEAAAAPAAMAAAACAAIAAAAQAAMAAAAEAAIAAAAvAAMAAAAHAAIAAAAOAAIAAAAKAAQAAAAjAAIAAAAKAAQAAAA2AAIAAAANAAQAAABJAAIAAAANAAQAAABXAAIAAAANAAQAAABwAAIAAAANAAQAAAD8/wQAAAAAAAIAAAD8/wUAAAAAAAIAAAD9/wUAAAAAAAIAAAD+/wUAAAAAAAIAAAD//wUAAAAAAAIAAAAAAAUAAAAAAAMAAAABAAUAAAAAAAIAAAACAAUAAAAAAAIAAAADAAUAAAAAAAIAAAAEAAUAAAAAAAIAAAAFAAQAAAAAAAAAAAAEAAQAAAAAAAIAAAADAAQAAAAAAAIAAAACAAQAAAAAAAIAAAABAAQAAAAAAAIAAAAAAAQAAAAAAAIAAAD//wQAAAAAAAIAAAD+/wQAAAAAAAIAAAD9/wQAAAAAAAIAAAD8/wYAAAAAAAIAAAD9/wYAAAAAAAIAAAD+/wYAAAAAAAIAAAD//wYAAAAAAAIAAAAAAAYAAAAAAAIAAAABAAYAAAAAAAIAAAACAAYAAAAAAAIAAAADAAYAAAAAAAIAAAAEAAYAAAAAAAIAAAAGAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAAAAAAAAAAGAAYAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAJAAQAAAAAAAAAAAAKAAQAAAAAAAAAAAALAAQAAAAAAAAAAAAMAAQAAAABAAEAAAANAAQAAAAAAAAAAAAOAAQAAAAAAAIAAAAOAAUAAAAAAAIAAAAOAAYAAAAAAAAAAAANAAYAAAAAAAAAAAAMAAYAAAAAAAAAAAALAAYAAAAAAAAAAAALAAUAAAAAAAAAAAAKAAUAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAIAAYAAAAAAAAAAAAHAAYAAAAAAAAAAAAGAAUAAAAAAAAAAAAIAAUAAAABAAEAAAAMAAUAAAAAAAAAAAANAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAAVAAUAAAAAAAIAAAAiAAUAAAABAAMAAAAZAAQAAAABAAMAAAAUAAQAAAAAAAIAAAAUAAUAAAAAAAIAAAAUAAYAAAAAAAIAAAATAAYAAAAAAAIAAAASAAYAAAAAAAIAAAARAAYAAAAAAAIAAAAQAAYAAAAAAAIAAAAPAAYAAAAAAAIAAAAPAAUAAAAAAAIAAAAPAAQAAAAAAAIAAAAQAAQAAAAAAAIAAAARAAQAAAAAAAIAAAASAAQAAAAAAAIAAAATAAQAAAAAAAIAAAASAAUAAAAAAAIAAAARAAUAAAAAAAIAAAAQAAUAAAAAAAIAAAATAAUAAAAAAAMAAAAVAAQAAAAAAAIAAAAWAAQAAAAAAAIAAAAXAAQAAAAAAAIAAAAXAAUAAAAAAAIAAAAWAAUAAAAAAAIAAAAVAAYAAAAAAAIAAAAWAAYAAAAAAAIAAAAXAAYAAAAAAAIAAAAYAAUAAAAAAAIAAAAYAAQAAAAAAAIAAAAYAAYAAAAAAAIAAAAZAAYAAAAAAAIAAAAaAAYAAAAAAAIAAAAaAAUAAAAAAAIAAAAZAAUAAAAAAAIAAAAaAAQAAAAAAAIAAAAbAAQAAAAAAAIAAAAcAAQAAAAAAAIAAAAdAAQAAAAAAAIAAAAeAAQAAAAAAAIAAAAfAAQAAAAAAAIAAAAgAAQAAAAAAAIAAAAhAAQAAAAAAAIAAAAiAAQAAAAAAAIAAAAfAAUAAAAAAAMAAAAeAAUAAAAAAAIAAAAdAAUAAAAAAAIAAAAcAAUAAAAAAAIAAAAbAAUAAAAAAAIAAAAgAAUAAAAAAAIAAAAgAAYAAAAAAAIAAAAfAAYAAAAAAAIAAAAeAAYAAAAAAAIAAAAdAAYAAAAAAAIAAAAcAAYAAAAAAAIAAAAbAAYAAAAAAAIAAAAhAAYAAAAAAAIAAAAiAAYAAAAAAAIAAAAjAAYAAAAAAAIAAAAkAAYAAAAAAAIAAAAlAAYAAAAAAAIAAAAmAAYAAAAAAAIAAAAmAAUAAAAAAAIAAAAnAAUAAAABAAIAAAAnAAQAAAABAAIAAAAmAAQAAAAAAAIAAAAlAAQAAAAAAAIAAAAkAAQAAAAAAAIAAAAjAAQAAAAAAAIAAAAjAAUAAAAAAAIAAAAkAAUAAAAAAAIAAAAlAAUAAAAAAAIAAAAhAAUAAAAAAAIAAAAvAAQAAAABAAIAAAAwAAQAAAABAAIAAAAwAAUAAAABAAIAAAAwAAYAAAABAAIAAAAvAAYAAAABAAIAAAAuAAYAAAABAAIAAAAtAAYAAAABAAIAAAAsAAYAAAABAAIAAAArAAYAAAABAAIAAAArAAUAAAABAAIAAAAqAAUAAAABAAIAAAApAAUAAAABAAIAAAAoAAUAAAABAAIAAAAoAAQAAAABAAIAAAApAAQAAAABAAIAAAAqAAQAAAABAAIAAAArAAQAAAABAAIAAAAsAAQAAAABAAIAAAAtAAQAAAABAAIAAAAuAAQAAAABAAIAAAAuAAUAAAABAAIAAAAtAAUAAAABAAIAAAAsAAUAAAABAAIAAAAvAAUAAAABAAIAAAAqAAYAAAABAAIAAAApAAYAAAABAAIAAAAoAAYAAAABAAIAAAAnAAYAAAABAAIAAAAxAAYAAAABAAIAAAAyAAYAAAABAAIAAAAzAAYAAAABAAIAAAA0AAYAAAABAAIAAAA2AAQAAAABAAAAAAA1AAQAAAABAAAAAAA0AAQAAAABAAAAAAAzAAQAAAABAAAAAAAyAAQAAAABAAAAAAAxAAQAAAABAAAAAAAxAAUAAAABAAAAAAAyAAUAAAABAAAAAAAzAAUAAAABAAAAAAA0AAUAAAABAAAAAAA1AAUAAAABAAAAAAA1AAYAAAABAAAAAAA2AAYAAAABAAAAAAA3AAYAAAABAAAAAAA3AAUAAAABAAAAAAA4AAUAAAABAAAAAAA4AAQAAAABAAAAAAA5AAQAAAABAAAAAAA6AAQAAAABAAAAAAA7AAQAAAABAAAAAAA8AAQAAAAAAAEAAAA9AAQAAAABAAAAAAA+AAQAAAABAAAAAAA/AAQAAAABAAAAAABAAAQAAAABAAAAAABBAAQAAAABAAAAAABCAAQAAAABAAAAAABCAAUAAAABAAAAAABDAAUAAAABAAAAAABBAAUAAAABAAAAAABAAAUAAAABAAAAAAA/AAUAAAABAAAAAAA+AAUAAAABAAAAAAA9AAUAAAABAAAAAAA8AAUAAAABAAAAAAA7AAUAAAABAAAAAAA6AAUAAAABAAAAAAA5AAUAAAABAAAAAAA4AAYAAAABAAAAAAA2AAUAAAABAAAAAAA3AAQAAAABAAAAAAA5AAYAAAABAAAAAAA6AAYAAAABAAAAAAA7AAYAAAABAAAAAAA8AAYAAAABAAAAAAA9AAYAAAABAAAAAAA+AAYAAAABAAAAAAA/AAYAAAABAAAAAABAAAYAAAABAAAAAABBAAYAAAABAAAAAABCAAYAAAABAAAAAABDAAYAAAABAAAAAABEAAYAAAABAAAAAABFAAYAAAABAAAAAABGAAYAAAAAAAEAAABHAAYAAAABAAAAAABIAAYAAAABAAAAAABJAAYAAAABAAAAAABKAAYAAAABAAAAAABLAAYAAAABAAAAAABMAAYAAAABAAAAAABMAAUAAAABAAAAAABMAAQAAAABAAAAAABLAAQAAAABAAAAAABKAAQAAAABAAAAAABJAAQAAAABAAAAAABIAAQAAAABAAAAAABHAAQAAAABAAAAAABGAAQAAAABAAAAAABFAAQAAAABAAAAAABEAAQAAAABAAAAAABDAAQAAAABAAAAAABGAAUAAAABAAAAAABHAAUAAAABAAAAAABIAAUAAAABAAAAAABJAAUAAAABAAAAAABKAAUAAAABAAAAAABLAAUAAAABAAAAAABFAAUAAAABAAAAAABEAAUAAAABAAAAAABNAAQAAAABAAAAAABNAAUAAAABAAAAAABNAAYAAAABAAAAAABOAAYAAAABAAAAAABPAAUAAAABAAAAAABQAAUAAAABAAAAAABQAAQAAAABAAAAAABRAAQAAAABAAAAAABSAAQAAAABAAAAAABTAAQAAAABAAAAAABUAAQAAAABAAAAAABVAAQAAAABAAAAAABWAAQAAAABAAAAAABXAAQAAAABAAAAAABYAAQAAAABAAEAAABZAAQAAAABAAAAAABaAAQAAAABAAAAAABbAAQAAAABAAAAAABcAAQAAAABAAAAAABdAAQAAAABAAAAAABeAAQAAAABAAAAAABfAAQAAAABAAAAAABgAAQAAAABAAAAAABhAAQAAAABAAAAAABhAAUAAAABAAAAAABiAAUAAAABAAAAAABjAAUAAAABAAAAAABkAAUAAAABAAAAAABlAAUAAAABAAAAAABmAAUAAAAAAAEAAABnAAUAAAABAAAAAABoAAUAAAABAAAAAABpAAUAAAABAAAAAABqAAUAAAABAAAAAABrAAUAAAABAAAAAABsAAUAAAABAAAAAABsAAQAAAABAAAAAABtAAQAAAABAAAAAABuAAQAAAAAAAEAAABvAAQAAAABAAAAAABwAAUAAAABAAEAAABxAAUAAAABAAAAAAByAAUAAAABAAAAAAByAAQAAAABAAAAAABzAAQAAAABAAAAAABzAAUAAAABAAAAAAB0AAUAAAABAAAAAAB1AAUAAAABAAAAAAB1AAYAAAABAAAAAAB0AAQAAAABAAAAAAB0AAYAAAABAAAAAABzAAYAAAABAAAAAAByAAYAAAABAAAAAABxAAYAAAABAAAAAABwAAYAAAABAAAAAABxAAQAAAABAAAAAABwAAQAAAABAAAAAABvAAUAAAABAAAAAABvAAYAAAABAAAAAABuAAYAAAAAAAEAAABtAAYAAAABAAAAAABtAAUAAAABAAAAAABuAAUAAAABAAAAAABsAAYAAAABAAAAAABrAAYAAAABAAAAAABqAAYAAAABAAAAAABpAAYAAAABAAAAAABoAAYAAAABAAAAAABnAAYAAAABAAAAAABgAAUAAAABAAAAAABfAAUAAAABAAAAAABeAAUAAAAAAAEAAABdAAUAAAABAAAAAABcAAUAAAABAAAAAABbAAUAAAABAAAAAABaAAUAAAABAAAAAABZAAUAAAABAAAAAABYAAUAAAABAAAAAABXAAUAAAABAAAAAABWAAUAAAABAAAAAABVAAUAAAABAAAAAABUAAUAAAABAAAAAABTAAUAAAABAAAAAABSAAUAAAABAAAAAABRAAUAAAABAAAAAABPAAQAAAABAAAAAABOAAQAAAABAAAAAABOAAUAAAABAAAAAABPAAYAAAABAAAAAABQAAYAAAABAAAAAABRAAYAAAABAAAAAABSAAYAAAABAAAAAABTAAYAAAABAAAAAABUAAYAAAABAAAAAABVAAYAAAABAAAAAABWAAYAAAABAAAAAABXAAYAAAABAAAAAABYAAYAAAABAAAAAABZAAYAAAABAAAAAABaAAYAAAABAAAAAABbAAYAAAABAAAAAABcAAYAAAABAAAAAABdAAYAAAABAAAAAABeAAYAAAABAAAAAABfAAYAAAABAAAAAABjAAYAAAABAAAAAABkAAYAAAABAAAAAABlAAYAAAABAAAAAABmAAYAAAABAAAAAABiAAYAAAABAAAAAABhAAYAAAABAAAAAABgAAYAAAABAAAAAABiAAQAAAABAAAAAABjAAQAAAABAAAAAABkAAQAAAABAAAAAABlAAQAAAABAAAAAABmAAQAAAABAAAAAABnAAQAAAABAAAAAABoAAQAAAABAAAAAABpAAQAAAABAAAAAABqAAQAAAABAAAAAABrAAQAAAABAAAAAAD7/wMAAAAAAAIAAAD6/wMAAAACAAIAAAD6/wQAAAAAAAIAAAD7/wQAAAABAAMAAAD7/wUAAAAAAAIAAAD7/wYAAAAAAAIAAAD6/wYAAAAAAAIAAAD6/wUAAAAAAAIAAAB0AAMAAAADAAIAAAB1AAMAAAADAAIAAAB2AAMAAAADAAIAAAB3AAMAAAADAAIAAAB4AAMAAAAGAAIAAAB5AAMAAAAIAAMAAAB6AAMAAAAGAAMAAACAAAMAAAAGAAMAAACGAAMAAAAGAAMAAAB7AAMAAAAEAAMAAAB/AAMAAAAEAAMAAACBAAMAAAAEAAMAAACFAAMAAAAEAAMAAAB8AAMAAAAJAAMAAAB+AAMAAAAJAAMAAACEAAMAAAAJAAMAAAB9AAMAAAACAAIAAAB6AAQAAAABAAMAAACFAAUAAAABAAMAAACCAAMAAAAGAAIAAACDAAMAAAAHAAIAAACHAAMAAAAHAAIAAACIAAMAAAAHAAIAAACJAAMAAAAHAAIAAACKAAMAAAABAAIAAACLAAMAAAAHAAIAAACMAAMAAAACAAEAAACNAAMAAAACAAEAAACOAAMAAAAAAAAAAACQAAMAAAACAAEAAACRAAMAAAAFAAAAAACPAAMAAAAFAAAAAACTAAMAAAAFAAAAAACYAAMAAAAFAAAAAACSAAMAAAACAAAAAACXAAMAAAACAAAAAACOAAQAAAAAAAAAAACNAAQAAAAAAAAAAACNAAUAAAAAAAAAAACNAAYAAAAAAAAAAACPAAYAAAAAAAAAAACQAAYAAAAAAAAAAACQAAUAAAAAAAAAAACRAAUAAAAAAAAAAACRAAQAAAAAAAAAAACSAAQAAAAAAAAAAACTAAQAAAAAAAAAAACQAAQAAAAAAAAAAACPAAQAAAAAAAAAAACPAAUAAAAAAAAAAACOAAUAAAAAAAAAAACOAAYAAAAAAAAAAACXAAUAAAAAAAEAAACZAAQAAAAAAAEAAACUAAMAAAAFAAEAAACWAAMAAAAFAAEAAACaAAMAAAAFAAEAAACZAAMAAAAFAAEAAACVAAMAAAAFAAEAAACUAAQAAAAAAAAAAACVAAQAAAAAAAAAAACWAAQAAAAAAAAAAACXAAQAAAAAAAAAAACYAAQAAAAAAAAAAACaAAQAAAAAAAAAAACaAAUAAAAAAAAAAACaAAYAAAAAAAAAAACZAAYAAAAAAAAAAACYAAYAAAAAAAAAAACXAAYAAAAAAAAAAACWAAYAAAAAAAAAAACVAAYAAAAAAAAAAACUAAYAAAAAAAAAAACTAAYAAAAAAAAAAACSAAYAAAAAAAAAAACRAAYAAAAAAAAAAACSAAUAAAAAAAAAAACTAAUAAAAAAAAAAACUAAUAAAAAAAAAAACVAAUAAAAAAAAAAACWAAUAAAAAAAAAAACZAAUAAAAAAAAAAACYAAUAAAAAAAAAAACLAAQAAAAAAAAAAACLAAUAAAAAAAAAAACMAAUAAAAAAAAAAACMAAYAAAAAAAAAAACLAAYAAAAAAAAAAACMAAQAAAABAAEAAAB8AAUAAAABAAIAAAB7AAUAAAABAAIAAAB7AAYAAAABAAIAAAB6AAYAAAABAAIAAAB5AAYAAAABAAIAAAB4AAYAAAABAAIAAAB3AAYAAAABAAIAAAB3AAUAAAABAAIAAAB2AAUAAAABAAIAAAB2AAQAAAABAAIAAAB1AAQAAAABAAIAAAB3AAQAAAABAAIAAAB4AAQAAAABAAIAAAB5AAQAAAABAAIAAAB5AAUAAAABAAIAAAB4AAUAAAABAAIAAAB2AAYAAAABAAIAAAB6AAUAAAABAAIAAAB8AAYAAAABAAIAAAB9AAYAAAABAAIAAAB+AAYAAAABAAIAAAB/AAYAAAABAAIAAACAAAYAAAABAAIAAACBAAYAAAABAAIAAACCAAYAAAABAAIAAACDAAYAAAABAAIAAACEAAYAAAABAAIAAACFAAYAAAABAAIAAACGAAYAAAABAAIAAACHAAYAAAABAAIAAACIAAYAAAABAAIAAACJAAYAAAABAAIAAACKAAYAAAABAAIAAACKAAUAAAABAAIAAACKAAQAAAABAAIAAACJAAQAAAABAAIAAACIAAQAAAABAAIAAACHAAQAAAABAAIAAACGAAQAAAABAAIAAACFAAQAAAABAAIAAACEAAQAAAABAAIAAACDAAQAAAABAAIAAACCAAQAAAABAAIAAACBAAQAAAABAAIAAACAAAQAAAABAAIAAAB/AAQAAAABAAIAAAB+AAQAAAABAAIAAAB9AAQAAAABAAIAAAB8AAQAAAABAAIAAAB7AAQAAAABAAIAAAB9AAUAAAABAAIAAAB+AAUAAAABAAIAAAB/AAUAAAABAAIAAACAAAUAAAABAAIAAACBAAUAAAABAAIAAACCAAUAAAABAAIAAACDAAUAAAABAAIAAACEAAUAAAABAAIAAACJAAUAAAAAAAMAAACGAAUAAAABAAIAAACHAAUAAAABAAIAAACIAAUAAAABAAIAAACFAAIAAAAKAAQAAACWAAIAAAAKAAQAAAB7AAIAAAAMAAIAAACPAAIAAAAMAAIAAACUAAIAAAAOAAEAAACAAAIAAAAKAAAAAACZAAIAAAAKAAAAAACKAAIAAAAPAAIAAACbAAMAAAAFAAIAAACcAAMAAAABAAMAAACdAAMAAAABAAMAAACeAAMAAAAIAAIAAACfAAMAAAABAAMAAACgAAMAAAACAAIAAAChAAQAAAAAAAMAAACiAAQAAAABAAIAAACjAAQAAAABAAIAAACkAAQAAAABAAIAAAClAAQAAAABAAIAAACmAAQAAAABAAIAAACnAAQAAAABAAIAAACoAAQAAAABAAIAAACpAAQAAAABAAIAAACqAAQAAAABAAIAAACrAAQAAAABAAIAAACsAAQAAAABAAIAAACdAAQAAAABAAIAAACcAAQAAAABAAIAAACcAAUAAAAFAAIAAACdAAUAAAAFAAIAAACeAAQAAAAFAAIAAACfAAQAAAAFAAIAAACgAAQAAAABAAIAAACiAAMAAAABAAIAAACjAAMAAAACAAMAAACkAAMAAAACAAMAAAClAAMAAAABAAIAAACmAAMAAAAIAAIAAACnAAMAAAABAAIAAACoAAMAAAAIAAIAAACtAAQAAAABAAIAAACiAAUAAAAFAAIAAAChAAUAAAAFAAIAAACjAAUAAAAFAAIAAACkAAUAAAAFAAIAAAClAAUAAAAFAAIAAACmAAUAAAAFAAIAAACnAAUAAAAFAAIAAACoAAUAAAAFAAIAAACpAAUAAAAFAAIAAACqAAUAAAAFAAIAAACrAAUAAAAFAAIAAACsAAUAAAAFAAIAAACsAAYAAAABAAIAAACtAAYAAAABAAIAAACrAAMAAAAFAAIAAAChAAMAAAAFAAIAAACpAAMAAAAFAAIAAACqAAMAAAAGAAIAAACsAAMAAAAFAAIAAACtAAMAAAAFAAIAAACuAAMAAAAGAAIAAACuAAQAAAAAAAIAAACuAAUAAAAAAAIAAACtAAUAAAAFAAIAAACgAAUAAAAFAAIAAACeAAUAAAAFAAIAAACbAAUAAAAFAAIAAACbAAQAAAAFAAIAAACbAAYAAAAFAAIAAACcAAYAAAAFAAIAAACdAAYAAAAFAAIAAACeAAYAAAAFAAIAAACfAAYAAAAFAAIAAACgAAYAAAAFAAIAAAChAAYAAAAFAAIAAACiAAYAAAAFAAIAAACjAAYAAAAFAAIAAACkAAYAAAAFAAIAAAClAAYAAAAFAAIAAACmAAYAAAAFAAIAAACnAAYAAAAFAAIAAACoAAYAAAAFAAIAAACpAAYAAAAFAAIAAACqAAYAAAAFAAIAAACrAAYAAAAFAAIAAACfAAUAAAAFAAIAAACwAAMAAAAAAAIAAACvAAMAAAAJAAIAAACvAAQAAAAAAAIAAACvAAUAAAAAAAIAAACxAAQAAAAAAAIAAACyAAUAAAAAAAIAAACzAAUAAAAAAAIAAACzAAYAAAAAAAIAAAC0AAYAAAAAAAIAAAC1AAYAAAAAAAIAAAC2AAYAAAAAAAIAAAC3AAYAAAAAAAIAAAC3AAUAAAAAAAIAAAC4AAUAAAAAAAIAAAC5AAYAAAAAAAIAAAC6AAYAAAAAAAIAAAC7AAYAAAAAAAIAAAC8AAYAAAAAAAIAAAC9AAYAAAAAAAIAAAC+AAYAAAAAAAIAAAC/AAYAAAAAAAIAAAC/AAUAAAAAAAIAAADAAAUAAAAAAAIAAADAAAQAAAAAAAIAAAC/AAQAAAAAAAIAAAC+AAQAAAAEAAIAAAC9AAQAAAAAAAIAAAC8AAQAAAAAAAIAAAC7AAQAAAAAAAIAAAC6AAQAAAAAAAIAAAC5AAQAAAAAAAIAAAC4AAQAAAAAAAIAAAC3AAQAAAAAAAIAAAC2AAQAAAAAAAIAAAC1AAQAAAAAAAIAAAC0AAQAAAAAAAIAAACzAAQAAAAAAAIAAACyAAQAAAAAAAIAAACwAAQAAAAAAAIAAACuAAYAAAAEAAIAAACvAAYAAAAEAAIAAACwAAYAAAAAAAIAAACxAAYAAAAAAAIAAACyAAYAAAAAAAIAAAC4AAYAAAAAAAIAAADAAAYAAAAAAAIAAAC+AAUAAAAAAAIAAAC9AAUAAAAAAAIAAAC8AAUAAAAAAAIAAAC7AAUAAAAAAAIAAAC6AAUAAAAAAAMAAAC5AAUAAAAAAAIAAAC2AAUAAAAAAAIAAAC1AAUAAAAAAAIAAAC0AAUAAAAAAAIAAACxAAUAAAAAAAIAAACwAAUAAAAAAAIAAADBAAQAAAAAAAIAAADCAAQAAAAAAAIAAADDAAQAAAAAAAIAAADEAAQAAAAAAAIAAADFAAUAAAAAAAIAAADGAAUAAAAAAAIAAADHAAUAAAAAAAIAAADIAAUAAAAAAAIAAADJAAUAAAAAAAIAAADIAAQAAAAAAAIAAADHAAQAAAAAAAIAAADGAAQAAAAAAAIAAADFAAQAAAAAAAIAAADBAAUAAAAAAAIAAADCAAUAAAAAAAIAAADDAAUAAAAAAAIAAADEAAUAAAAAAAIAAADBAAYAAAAAAAIAAADCAAYAAAAAAAIAAADDAAYAAAAAAAIAAADEAAYAAAAAAAIAAADFAAYAAAAAAAIAAADGAAYAAAAAAAIAAADHAAYAAAAAAAIAAADIAAYAAAAAAAIAAADJAAYAAAAAAAIAAADKAAYAAAABAAMAAAC0AAMAAAAFAAIAAAC4AAMAAAAFAAIAAACxAAMAAAAGAAIAAACyAAMAAAAGAAIAAAC5AAMAAAAGAAIAAAC/AAMAAAAGAAIAAAC3AAMAAAAJAAMAAAC2AAMAAAAJAAMAAACzAAMAAAAJAAMAAAC+AAMAAAACAAIAAAC8AAMAAAACAAIAAAC1AAMAAAACAAIAAADGAAMAAAACAAIAAADHAAMAAAACAAIAAADIAAMAAAACAAIAAADJAAMAAAACAAIAAADFAAMAAAABAAMAAADKAAUAAAAJAAIAAAC9AAMAAAABAAMAAADKAAMAAAAAAAMAAADEAAMAAAAAAAMAAAC6AAMAAAAAAAIAAAC7AAMAAAAAAAIAAADAAAMAAAAAAAIAAADBAAMAAAAAAAIAAADCAAMAAAAAAAIAAADDAAMAAAAAAAIAAADJAAQAAAAAAAIAAADKAAQAAAAAAAIAAADLAAQAAAAAAAIAAADMAAQAAAAAAAIAAADNAAQAAAAAAAIAAADOAAQAAAAAAAIAAADOAAUAAAAAAAIAAADNAAUAAAAAAAIAAADMAAUAAAAAAAIAAADLAAUAAAAAAAIAAADLAAYAAAAAAAIAAADMAAYAAAAAAAIAAADNAAYAAAAAAAIAAADOAAYAAAAAAAIAAADOAAMAAAAGAAIAAADMAAMAAAAJAAIAAADLAAMAAAAJAAIAAADNAAMAAAACAAIAAACiAAIAAAAMAAEAAACyAAIAAAAMAAEAAADHAAIAAAAMAAEAAACmAAIAAAAPAAIAAAC+AAIAAAALAAQAAADCAAIAAAAMAAQAAACsAAIAAAANAAQAAACoAAIAAAAMAAAAAAC3AAIAAAAMAAAAAADOAAIAAAAMAAAAAACcAAIAAAAMAAAAAAA=")
tile_set = SubResource("TileSet_ipu8f")

[node name="fish" parent="." instance=ExtResource("1_1kvym")]
position = Vector2(63, 140)
collision_mask = 6

[node name="Camera2D" type="Camera2D" parent="fish"]
position = Vector2(82, 3)
zoom = Vector2(4, 4)
limit_left = 0
limit_top = 0
limit_right = 2725
limit_bottom = 260
limit_smoothed = true
position_smoothing_enabled = true
editor_draw_limits = true

[node name="Path2D" type="Path2D" parent="fish"]
position = Vector2(-407, -4)
scale = Vector2(1.96011, 0.702774)
curve = SubResource("Curve2D_rs32o")

[node name="PathFollow2D" type="PathFollow2D" parent="fish/Path2D"]
unique_name_in_owner = true
position = Vector2(348.779, 62.8667)
rotation = -1.59796

[node name="UpperBorder" type="StaticBody2D" parent="."]
position = Vector2(176, -67)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpperBorder"]
position = Vector2(345, 615)
rotation = 0.373943
shape = SubResource("WorldBoundaryShape2D_qe28k")

[node name="LeftBorder" type="StaticBody2D" parent="."]
position = Vector2(93, 100)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftBorder"]
position = Vector2(2131, 59)
rotation = 1.9558
shape = SubResource("WorldBoundaryShape2D_qe28k")

[node name="CharacterBody2D" parent="." instance=ExtResource("3_d4xgk")]
position = Vector2(251, 122)

[node name="CharacterBody2D2" parent="." instance=ExtResource("3_d4xgk")]
position = Vector2(137, 57)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8
autostart = true

[node name="Gameover" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="Gameover"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.541176)

[node name="Label" type="Label" parent="Gameover/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -227.0
offset_right = 139.0
offset_bottom = -158.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 47
text = "Game Over"

[node name="Winner" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="Winner"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.533333)

[node name="Label" type="Label" parent="Winner/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -215.0
offset_right = -35.0
offset_bottom = -185.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 21
text = "You are the Biggest Fish in the water. Congrats!"

[connection signal="fish_eaten" from="fish" to="." method="_on_fish_fish_eaten"]
[connection signal="winner" from="fish" to="." method="_on_fish_winner"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
